--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -13,8 +13,6 @@ CMS, QCD, QFT, LHC, BFKL, HP, LxG, RMS, QED, QM, OPE, TPE, IR, KL, CKL, WY, SWY
 ATLAS ALFA, TDR
 \fi
 
-% Sec. vs. Sc.
-
 \chapter{Elastic scattering of protons}
 
 \fig{fig/pdf/el_scat_scheme.pdf}{el scat scheme}{The kinematical of equal-mass elastic scattering in the center-of-mass system. The labels give the four-momenta of the particles involved ($z$ axis is horizontal, $x$ vertical).}
@@ -309,7 +307,7 @@ In this part we will review the results summarized above and discuss their valid
 
 The first quantity to review is the Coulomb amplitude. We have pursued two approaches to derive it -- the QED and the eikonal model. While we consider QED the best available tool to describe electromagnetic interactions, we have presented the leading order (OPE) to the scattering amplitude only, see \Eq{el dsdt em}. A natural question could be raised -- is the leading order good enough? An answer can be found in the already quoted works on form factors \bref{arrington07,puckett10}. The authors used two methods for extracting the form factors. One is based on comparing the measured differential cross-section $\d\si/\d t$ with the one expected for point like particles (Mott formula, calculated also in OPE order, see e.g. \bref{chyla}). In the other method a longitudinally polarized electron beam is used and the polarization of the recoil proton is measured (more details e.g. in \bref{gayou02}). Then, these two methods are found to disagree for $|t| \gs 1\un{GeV^2}$ (see e.g. Fig.~2 in \bref{arrington07}). The authors argue that most of the discrepancy disappears if two-photon-exchange (TPE) contributions are included. Moreover these corrections alter mostly the results of the cross-section method (which is very similar to our form-factor application). This leads us to the conclusion that the OPE cross-section presented in \Eq{el dsdt em} is only accurate for $|t|$ below $1\un{GeV^2}$.
 
-We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the TPE corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik rep} with the eikonal calculated from the OPE amplitude. According to Sec.~6.2 in \bref{barone}, this procedure is for large $s$ equivalent to summing diagrams of the type \Fg{el diagrams2} A. Hence only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ OPE) one merely by phase (\Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
+We have also calculated the Coulomb amplitude in the eikonal formalism, see \Eq{el cahn 2}. This amplitude receives contributions of all orders of $\al$ and thus may seem to include the TPE corrections. It is only partially true. The amplitude has been generated via the eikonal relation \Eq{el eik rep} with the eikonal calculated from the OPE amplitude. According to Sc.~6.2 in \bref{barone}, this procedure is for large $s$ equivalent to summing diagrams of the type \Fg{el diagrams2} A. Hence only this type of diagrams is included in the eikonal calculation. We have seen that the eikonal complete amplitude differs from the Born ($\equiv$ OPE) one merely by phase (\Eq{el cahn 2}). This keeps the corresponding cross-section unchanged and thus it is insufficient to reconcile the two form-factor-extraction methods. These facts bring us to the conclusion that neither the eikonal full amplitude can be trusted above $|t|\approx 1\un{GeV^2}$.
 
 \fig{fig/pdf/el_diagrams2.pdf}{el diagrams2}{A: The type of diagrams that is included in the eikonal calculation of the complete Coulomb amplitude. B -- E: the lowest order sub-diagrams missing in the eikonal calculation. The double line in E represents an excited state of a proton.}
 
