--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -142,7 +142,7 @@ Since the optics \Eq{ttm lin par} relates the kinematics of a proton at the IP a
 
 The rich physics programme of TOTEM requires several running scenarios, including several optics. We will now review the foreseen scenarios, classified by the beta-function at the interaction point $\be^*$. Certain parameters have been calculated assuming the CMS energy of $\sqrt s = 14\un{TeV}$.
 
-\> The \em{high $\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts with a reduced normalized emittance of $\ep_N=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the IP $\si_{\th^*} = 0.3\un{\mu m}\ rad$. The expected beam sizes (i.e. the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the RPs to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{29} \hbox{ -- } 10^{30}\un{cm^{-2}s^{-1}}$.
+\> The \em{high $\be^*$} scenario is dedicated to the measurement of the total cross-section and low-$|t|$ elastic scattering. The optics with $\be^* = 1535\un{m}$ provides high effective lengths: $L_x$ up to $110\un{m}$ and $L_y$ up to $270\un{m}$ (both in the $220\un{m}$ stations). This ensures a good $t$-resolution (see \Sc{elr 1535}). To improve it further, this scenario counts with a reduced normalized emittance of $\ep_N=1\un{\mu m\ rad}$. This leads to a very low beam divergence at the IP $\si_{\th^*} = 0.3\un{\mu rad}$. The expected beam sizes (i.e. the beam sigmas) at the $220\un{m}$ stations are $\si_x = 0.03\un{mm}$ and $\si_y = 0.085\un{mm}$. The beam size, quite generally, determines the approach of the RPs to the beam -- a typical approach is about $10\si$ in each direction. The resulting elastic acceptance is drawn in red in \Fg{ttm elastic acceptance}. The acceptance reaches $30\percent$ at $|t_{30}| = 2\cdot10^{-3}\un{GeV^2}$. This scenario will use a rather low luminosity ${\cal L} \approx 10^{29} \hbox{ -- } 10^{30}\un{cm^{-2}s^{-1}}$.
 
 \> The \em{medium $\be^*$} scenario is based on a very universal optics with $\be^* = 90\un{m}$. It combines the properties of high and low $\be^*$ scenarios allowing for measurements of the total cross-section, medium-$|t|$ elastic scattering and certain diffractive processes. In the $220\un{m}$ stations the horizontal effective length $L_x$ is rather small, below $2.9\un{m}$, while in the vertical direction $L_y$ goes up to $260\un{m}$, which is similar to the high-$\be^*$ optics. The standard normalized emittance $\ep_{\rm N} = 3.75\un{\mu m\ rad}$ is planned to be used, leading to a beam divergence of about $2.4\un{\mu rad}$. The expected beam sizes at the $220\un{m}$ stations are $\si_x = 0.4\un{mm}$ and $\si_y = 0.59\un{mm}$. In other words, the pots will have to stay much further from the beam center than in the case of the high-$\be^*$ optics. Consequently, the elastic acceptance (blue histogram in \Fg{ttm elastic acceptance}) starts much later -- it reaches $30\percent$ only at $4\cdot 10^{-2}\un{GeV^2}$. This scenario counts with a luminosity of ${\cal L} \approx 10^{30}\un{cm^{-2}s^{-1}}$.
 
