--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -110,6 +110,8 @@
 \DefAbb{TPE}{Two Photon Exchange}{An approximation in QED.}
 \DefAbb{WY}{West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase WY}.}
 
+% Eq., Tab. -> Tb., Fig. -> Fg., Sc. + Ch.
+
 \PrintAbbreviations
 
 \EndText
